--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 text-center">
-                <h2>AT Cellphone Store</h2>
+                <h2> Stephen Curry Shoes </h2>
                 <hr class="hr" />
                 </div>
             </div>
@@ -17,15 +17,15 @@
             <div class="container">
             <div class="row">
                 <div class="col-4 text-center">
-                    <label id="product1"> Samsung  S21</label>
-                    <img src="aa.jpg" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
-                    <label for="product1" id="price1">27000.00</label>
+                    <label id="product1"> Splash Curry Jam </label>
+                    <img src="SS24_CURRY_C4_LowFlotro_AprilShowers_Site_4_5_2.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
+                    <label for="product1" id="price1">5436.00</label>
                     <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
                 </div>
                 <div class="col-4 text-center">
-                        <label id="product2"> Samsung  S22</label>
-                        <img src="ss.jpg" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
-                        <label for="product2" id="price2">37000.00</label>
+                        <label id="product2"> Curry 4 low Flotro Bruce </label>
+                        <img src="3028115-001_DEFAULT.webp" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
+                        <label for="product2" id="price2">6896.25</label>
                         <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
                 </div>
                 <div class="col-4">
@@ -38,12 +38,6 @@
                 </div>
             </div>
         </div>
-<script src="index.js"></script>
-     <br><br>
-       <div class="card text-center">
-      <div class="card-footer text-body-secondary">
-      Owned BY: JERO POGI
-    </div>
-    </div>
+<script src="index.js"></script>     
 </body>
 </html>
