--- a/index.html
+++ b/index.html
@@ -30,27 +30,27 @@
                         <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
                 </div>
                     <div class="col-4 text-center">
-                    <label id="product3"> Golden retriever</label>
-                    <img src="golden retreiver.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
-                    <label for="product3" id="price3">27000.00</label>
+                    <label id="product3"> Grade school "Curry Jam" </label>
+                    <img src="golden 1000075684.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
+                    <label for="product3" id="price3">5436.00</label>
                     <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
                 </div>
                     <div class="col-4 text-center">
-                    <label id="product4"> Husky</label>
-                    <img src="husky.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
-                    <label for="product4" id="price4">27000.00</label>
+                    <label id="product4"> Curry 4 retro </label>
+                    <img src="1000075684.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
+                    <label for="product4" id="price4">6436.50</label>
                     <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
                 </div>
                     <div class="col-4 text-center">
-                    <label id="product5">Poodle</label>
-                    <img src="poodle.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
-                    <label for="product5" id="price5">27000.00</label>
+                    <label id="product5">Curry 11 future wolf </label>
+                    <img src="1000075684.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
+                    <label for="product5" id="price5">9195.50</label>
                     <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
                 </div>
                 <div class="col-4 text-center">
-                    <label id="product6">Poodle</label>
-                    <img src="poodle.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
-                    <label for="product6" id="price6">27000.00</label>
+                    <label id="product6">Curry 11 Bruce Lee </label>
+                    <img src="1000075684.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
+                    <label for="product6" id="price6">6896.25</label>
                     <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
                 </div>
                      <div class="col-4">
