--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
-   <title> No other than JERO </title>
-    <head>
+   <title> JERO POGI </title>
+   <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
    </head>
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 text-center">
-                <h2>Stephen Curry Shoes</h2>
+                <h2> Stephen Curry Shoes </h2>
                 <hr class="hr" />
                 </div>
             </div>
@@ -23,45 +23,45 @@
                     <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
                 </div>
                 <div class="col-4 text-center">
-                        <label id="product2">Curry 4 low Flotro Bruce</label>
+                        <label id="product2"> Curry 4 low Flotro Bruce </label>
                         <img src="3028115-001_DEFAULT.webp" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
                         <label for="product2" id="price2">6896.25</label>
                         <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
                 </div>
-                    <div class="col-4 text-center">
-                    <label id="product3"> Grade school "Curry Jam" </label>
-                    <img src="1000075880.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
-                    <label for="product3" id="price3">5436.00</label>
+               <div class="col-4 text-center">
+                    <label id="product3"> Splash Curry Jam </label>
+                    <img src="SS24_CURRY_C4_LowFlotro_AprilShowers_Site_4_5_2.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
+                    <label for="product3" id="price1">5436.00</label>
                     <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
                 </div>
-                    <div class="col-4 text-center">
-                    <label id="product4"> Curry 4 retro </label>
-                    <img src="1000075878.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
-                    <label for="product4" id="price4">6436.50</label>
-                    <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
+                <div class="col-4 text-center">
+                        <label id="product4"> Curry 4 low Flotro Bruce </label>
+                        <img src="3028115-001_DEFAULT.webp" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
+                        <label for="product4" id="price4">6896.25</label>
+                        <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
                 </div>
-                    <div class="col-4 text-center">
-                    <label id="product5">Curry 11 future wolf </label>
-                    <img src="1000075877.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
-                    <label for="product5" id="price5">9195.50</label>
+               <div class="col-4 text-center">
+                    <label id="product5"> Splash Curry Jam </label>
+                    <img src="SS24_CURRY_C4_LowFlotro_AprilShowers_Site_4_5_2.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
+                    <label for="product5" id="price5">5436.00</label>
                     <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
                 </div>
                 <div class="col-4 text-center">
-                    <label id="product6">Curry 11 Bruce Lee </label>
-                    <img src="1000075684.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
-                    <label for="product6" id="price6">6896.25</label>
-                    <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
+                        <label id="product6"> Curry 4 low Flotro Bruce </label>
+                        <img src="3028115-001_DEFAULT.webp" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
+                        <label for="product6" id="price6">6896.25</label>
+                        <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
                 </div>
-                     <div class="col-4">
-                     <label for="carts"> Orders </label><br>
-                     <textarea class="form-control" rows="29" id="carts" cols="200" readonly style="width: 350px;height: 400px;font-size: 12px;"></textarea>
-                     <input type="text" class="form-control border-0" id="total" readonly placeholder="Total"/>
-                     <input type="number" class="form-control" id="cash" placeholder="Cash Tendered"/>
-                     <input type="text" class="form-control border-0" id="change" readonly placeholder="Change"/>
+                <div class="col-4">
+                        <label for="carts"> Orders </label><br>
+                        <textarea class="form-control" rows="29" id="carts" cols="200" readonly style="width: 350px;height: 400px;font-size: 12px;"></textarea>
+                        <input type="text" class="form-control border-0" id="total" readonly placeholder="Total"/>
+                        <input type="number" class="form-control" id="cash" placeholder="Cash Tendered"/>
+                        <input type="text" class="form-control border-0" id="change" readonly placeholder="Change"/>
+                     
                 </div>
             </div>
         </div>
-<script src="app.js"></script>
-     
+<script src="index.js"></script>     
 </body>
 </html>
