--- a/index.html
+++ b/index.html
@@ -30,26 +30,26 @@
                 </div>
                <div class="col-4 text-center">
                     <label id="product3"> Splash Curry Jam </label>
-                    <img src="SS24_CURRY_C4_LowFlotro_AprilShowers_Site_4_5_2.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
+                    <img src="1000075880.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
                     <label for="product3" id="price1">5436.00</label>
                     <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
                 </div>
                 <div class="col-4 text-center">
-                        <label id="product4"> Curry 4 low Flotro Bruce </label>
-                        <img src="3028115-001_DEFAULT.webp" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
-                        <label for="product4" id="price4">6896.25</label>
+                        <label id="product4"> Curry 11 Future wolf </label>
+                        <img src=1000075878.webp" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
+                        <label for="product4" id="price4">9195.50 </label>
                         <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
                 </div>
                <div class="col-4 text-center">
-                    <label id="product5"> Splash Curry Jam </label>
-                    <img src="SS24_CURRY_C4_LowFlotro_AprilShowers_Site_4_5_2.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
-                    <label for="product5" id="price5">5436.00</label>
+                    <label id="product5"> Curry 4 retro </label>
+                    <img src="1000075877.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
+                    <label for="product5" id="price5">6436.50</label>
                     <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
                 </div>
                 <div class="col-4 text-center">
-                        <label id="product6"> Curry 4 low Flotro Bruce </label>
-                        <img src="3028115-001_DEFAULT.webp" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
-                        <label for="product6" id="price6">6896.25</label>
+                        <label id="product6"> Grade school Curry Jam </label>
+                        <img src="1000075684.webp" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
+                        <label for="product6" id="price6">5436.50</label>
                         <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
                 </div>
                 <div class="col-4">
