--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="col-4 text-center">
                         <label id="product4"> Curry 11 Future wolf </label>
-                        <img src=1000075878.webp" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
+                        <img src="1000075878.webp" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
                         <label for="product4" id="price4">9195.50 </label>
                         <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
                 </div>
