--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                         <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
                 </div>
                <div class="col-4 text-center">
-                    <label id="product3"> Splash Curry Jam </label>
+                    <label id="product3"> Curry 11 Bruce Lee </label>
                     <img src="1000075880.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
-                    <label for="product3" id="price1">5436.00</label>
+                    <label for="product3" id="price1">6896.25</label>
                     <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
                 </div>
                 <div class="col-4 text-center">
