--- a/index.html
+++ b/index.html
@@ -28,6 +28,30 @@
                         <label for="product2" id="price2">6896.25</label>
                         <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
                 </div>
+               <div class="col-4 text-center">
+                    <label id="product1"> Grade School Curry Jam </label>
+                    <img src="1000075880.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
+                    <label for="product1" id="price1">5436.00</label>
+                    <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
+                </div>
+                <div class="col-4 text-center">
+                        <label id="product2"> Curry 4 retro </label>
+                        <img src="1000075878.webp" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
+                        <label for="product2" id="price2">6436.50</label>
+                        <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
+                </div>
+               <div class="col-4 text-center">
+                    <label id="product1"> Curry 11 Future Wolf </label>
+                    <img src="1000075877.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
+                    <label for="product1" id="price1">9195.50</label>
+                    <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
+                </div>
+                <div class="col-4 text-center">
+                        <label id="product2"> Curry 11 Bruce Lee </label>
+                        <img src="1000075684.webp" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
+                        <label for="product2" id="price2">6896.25</label>
+                        <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
+                </div>
                 <div class="col-4">
                         <label for="carts"> Orders </label><br>
                         <textarea class="form-control" rows="29" id="carts" cols="200" readonly style="width: 350px;height: 400px;font-size: 12px;"></textarea>
