--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
-   <title> petmalu </title>
-    <link rel="stylesheet" href="style.css">
+   <title> JERO POGI </title>
    <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -10,7 +9,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 text-center">
-                <h2>PET</h2>
+                <h2> Stephen Curry Shoes </h2>
                 <hr class="hr" />
                 </div>
             </div>
@@ -18,50 +17,27 @@
             <div class="container">
             <div class="row">
                 <div class="col-4 text-center">
-                    <label id="product1"> austrilian shepered</label>
-                    <img src="austrilian shepered.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
-                    <label for="product1" id="price1">27000.00</label>
+                    <label id="product1"> Splash Curry Jam </label>
+                    <img src="SS24_CURRY_C4_LowFlotro_AprilShowers_Site_4_5_2.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
+                    <label for="product1" id="price1">5436.00</label>
                     <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
                 </div>
                 <div class="col-4 text-center">
-                        <label id="product2">chow chow</label>
-                        <img src="chow chow.webp" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
-                        <label for="product2" id="price2">37000.00</label>
+                        <label id="product2"> Curry 4 low Flotro Bruce </label>
+                        <img src="3028115-001_DEFAULT.webp" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
+                        <label for="product2" id="price2">6896.25</label>
                         <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
                 </div>
-                    <div class="col-4 text-center">
-                    <label id="product3"> Golden retriever</label>
-                    <img src="golden retreiver.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
-                    <label for="product3" id="price3">27000.00</label>
-                    <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
-                </div>
-                    <div class="col-4 text-center">
-                    <label id="product4"> Husky</label>
-                    <img src="husky.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
-                    <label for="product4" id="price4">27000.00</label>
-                    <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
-                </div>
-                    <div class="col-4 text-center">
-                    <label id="product5">Poodle</label>
-                    <img src="poodle.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
-                    <label for="product5" id="price5">27000.00</label>
-                    <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
-                </div>
-                     <div class="col-4">
-                     <label for="carts"> Orders </label><br>
-                     <textarea class="form-control" rows="29" id="carts" cols="200" readonly style="width: 350px;height: 400px;font-size: 12px;"></textarea>
-                     <input type="text" class="form-control border-0" id="total" readonly placeholder="Total"/>
-                     <input type="number" class="form-control" id="cash" placeholder="Cash Tendered"/>
-                     <input type="text" class="form-control border-0" id="change" readonly placeholder="Change"/>
+                <div class="col-4">
+                        <label for="carts"> Orders </label><br>
+                        <textarea class="form-control" rows="29" id="carts" cols="200" readonly style="width: 350px;height: 400px;font-size: 12px;"></textarea>
+                        <input type="text" class="form-control border-0" id="total" readonly placeholder="Total"/>
+                        <input type="number" class="form-control" id="cash" placeholder="Cash Tendered"/>
+                        <input type="text" class="form-control border-0" id="change" readonly placeholder="Change"/>
+                     
                 </div>
             </div>
         </div>
-<script src="app.js"></script>
-     <br><br>
-       <div class="card text-center">
-      <div class="card-footer text-body-secondary">
-    <span style="font-weight:bold; color:#00698f">Jing kenneth ebio</span>
-    </div>
-    </div>
+<script src="index.js"></script>     
 </body>
 </html>
