--- a/index.html
+++ b/index.html
@@ -136,5 +136,11 @@
       </div>
     </div>
        </script>
+          <br><br>
+       <div class="card text-center">
+      <div class="card-footer text-body-secondary">
+      Owned BY: JERO POGI
+    </div>
+    </div>
 </body>
 </html>
