--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
-   <title> JERO POGI </title>
+   <title> JEROME'S FINAL EXAM</title>
     <link rel="stylesheet" href="style.css">
    <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -68,7 +68,7 @@
      <br><br>
        <div class="card text-center">
       <div class="card-footer text-body-secondary">
-    <span style="font-weight:bold; color:tan">Jero Delacruz</span>
+    <span style="font-weight:bold; color:tan">THANK YOU FOR ODER!</span>
           <div class="card text-center">      
     </div>
     </div>
@@ -139,7 +139,7 @@
           <br><br>
        <div class="card text-center">
       <div class="card-footer text-body-secondary">
-      Owned BY: JERO POGI
+      <span style="font-weight:bold; color:tan">OWNED by: JERO POGI</span>
     </div>
     </div>
 </body>
