--- a/index.html
+++ b/index.html
@@ -25,38 +25,38 @@
                     <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
                 </div>
                 <div class="col-4 text-center">
-                        <label id="product2"><span style="font-weight:bold; color:tan">Curry 4 Low Flotro Bruce</span></label>
+                        <label id="product2"><span style="font-weight:bold; color:White">Curry 4 Low Flotro Bruce</span></label>
                         <img src="3028115-001_DEFAULT.webp" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
                         <label for="product2" id="price2">6896.25</label>
                         <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
                 </div>
                     <div class="col-4 text-center">
-                    <label id="product3"><span style="font-weight:bold; color:tan">Grade School Curry Jam</span></label>
+                    <label id="product3"><span style="font-weight:bold; color:White">Grade School Curry Jam</span></label>
                     <img src="1000075880.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
                     <label for="product3" id="price3">5436.00</label>
                     <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
                 </div>
                     <div class="col-4 text-center">
-                    <label id="product4"><span style="font-weight:bold; color:tan">Curry 4 retro</span></label>
+                    <label id="product4"><span style="font-weight:bold; color:White">Curry 4 retro</span></label>
                     <img src="1000075878.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
                     <label for="product4" id="price4">6436.50</label>
                     <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
                 </div>
                     <div class="col-4 text-center">
-                    <label id="product5"><span style="font-weight:bold; color:tan">Curry 11 future wolf</span></label>
+                    <label id="product5"><span style="font-weight:bold; color:White">Curry 11 future wolf</span></label>
                     <img src="1000075877.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
                     <label for="product5" id="price5">9195.50</label>
                     <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
                 </div>
                
                      <div class="col-4 text-center">
-                    <label id="product5"><span style="font-weight:bold; color:tan">Curry 11 Bruce Lee</span></label>
+                    <label id="product5"><span style="font-weight:bold; color:White">Curry 11 Bruce Lee</span></label>
                     <img src="1000075684.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
                     <label for="product5" id="price5">6896.25</label>
                     <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
                 </div>
                      <div class="col-4">
-                     <label for="carts"><span style="font-weight:bold; color:tan"> Orders</span> </label><br>
+                     <label for="carts"><span style="font-weight:bold; color:White"> Orders</span> </label><br>
                      <textarea class="form-control" rows="29" id="carts" cols="200" readonly style="width: 350px;height: 400px;font-size: 12px;"></textarea>
                      <input type="text" class="form-control border-0" id="total" readonly placeholder="total"/>
                      <input type="number" class="form-control" id="cash" placeholder="Cash Tendered"/>
