--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="product-grid">
             <div class="row">
                 <div class="col-4 text-center">
-                    <label id="product1"> <span style="font-weight:bold; color:tan">Splash Curry Jam</span></label>
+                    <label id="product1"> <span style="font-weight:bold; color:White">Splash Curry Jam</span></label>
                     <img src="SS24_CURRY_C4_LowFlotro_AprilShowers_Site_4_5_2.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
                     <label for="product1" id="price1">5436.00</label>
                     <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
