--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
      <br><br>
        <div class="card text-center">
       <div class="card-footer text-body-secondary">
-    <span style="font-weight:bold; color:tan">THANK YOU FOR ODER!</span>
+    <span style="font-weight:bold; color:tan">THANK YOU FOR ORDER!</span>
           <div class="card text-center">      
     </div>
     </div>
